--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':keepchildrenstates-api'
+include ':keepchildrenstates-api', ':keepchildrenstates', ':sample'
 
 rootProject.name = "keepchildrenstates-project"
