--- a/keepchildrenstates/build.gradle
+++ b/keepchildrenstates/build.gradle
@@ -18,8 +18,27 @@ sourceSets {
 sourceSets.main.compileClasspath += configurations.provided
 
 dependencies {
-    compile "org.androidannotations:androidannotations:4.3.0"
+    compile "org.androidannotations:androidannotations:4.3.1"
     compile project(':keepchildrenstates-api')
     compile 'com.helger:jcodemodel:2.8.4'
     provided 'com.google.android:android:4.0.1.2'
 }
+
+ext {
+    artifact = 'keepchildrenstates'
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    }
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
