--- a/keepchildrenstates-api/build.gradle
+++ b/keepchildrenstates-api/build.gradle
@@ -6,5 +6,24 @@ sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
 dependencies {
-    compile 'org.androidannotations:androidannotations-api:4.3.0'
+    compile 'org.androidannotations:androidannotations-api:4.3.1'
 }
+
+ext {
+    artifact = 'keepchildrenstates-api'
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    }
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
